[package]
name = "imp"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
rustyline = "17.0.2"
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
