[package]
name = "imp"
version = "0.1.16"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
aws-config = "1.8.11"
aws-sdk-cognitoidentityprovider = "1.104.0"
anyhow = "1.0.100"
jsonwebtoken = "9.3"
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde"] }
# webauthn-rs = "0.5.3"
# webauthn-authenticator-rs = "0.5.3"
